--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "dapple_packages/dappsys"]
-	path = dapple_packages/dappsys
-	url = https://github.com/nexusdev/dappsys
+[submodule "dapple_packages/erc20"]
+	path = dapple_packages/erc20
+	url = https://github.com/nexusdev/erc20
